--- a/layout/includes/head.pug
+++ b/layout/includes/head.pug
@@ -54,6 +54,9 @@ if theme.fancybox
 //- analytics
 !=partial('includes/head/analytics', {}, {cache: true})
 
+//- sharethis
+!=partial('includes/head/sharethis', {}, {cache: true})
+
 //- font
 if theme.blog_title_font && theme.blog_title_font.font_link
   link(rel='stylesheet' href=url_for(theme.blog_title_font.font_link) media="print" onload="this.media='all'")
