--- a/source/css/_layout/post.styl
+++ b/source/css/_layout/post.styl
@@ -164,7 +164,7 @@ beautify()
 
     .post-meta
       &__tag-list
-        display: inline-block
+        // display: inline-block
 
       &__tags
         display: inline-block
@@ -182,10 +182,10 @@ beautify()
           color: var(--white)
 
     .post_share
-      display: inline-block
-      float: right
-      margin: 8px 0 0
-      width: fit-content
+      // display: inline-block
+      // float: right
+      // margin: 8px 0 0
+      // width: fit-content
 
       .social-share
         font-size: .85em
