--- a/layout/index.pug
+++ b/layout/index.pug
@@ -3,5 +3,23 @@ extends includes/layout.pug
 block content
   include ./includes/mixins/post-ui.pug
   #recent-posts.recent-posts
+    div#div-onead-draft
+    //- 結構化資料
+    script(type="text/javascript").
+      var custom_call = function (params) {
+          if (params.hasAd) {
+            console.log('TD has AD')
+          } else {
+            console.log('TD AD Empty')
+          }
+        }
+      ONEAD_TEXT = {};
+      ONEAD_TEXT.pub = {};
+      ONEAD_TEXT.pub.uid = "2000261";
+      ONEAD_TEXT.pub.slotobj = document.getElementById("div-onead-draft");
+      ONEAD_TEXT.pub.player_mode = "text-drive";
+      ONEAD_TEXT.pub.queryAdCallback = custom_call;
+      window.ONEAD_text_pubs = window.ONEAD_text_pubs || [];
+      ONEAD_text_pubs.push(ONEAD_TEXT);
     +postUI
     include includes/pagination.pug
