fix: 調整註解文字說明

--- a/layout/index.pug
+++ b/layout/index.pug
@@ -3,8 +3,8 @@ extends includes/layout.pug
 block content
   include ./includes/mixins/post-ui.pug
   #recent-posts.recent-posts
+    //- OneAD 內嵌廣告
     div#div-onead-draft
-    //- 結構化資料
     script(type="text/javascript").
       var custom_call = function (params) {
           if (params.hasAd) {
